# LightningBO

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi-release.yml  python-package.yml
LightningBO/: __init__.py  bayesian_core.py  bayesian_optimization.py
docs/: LightningBO.ipynb
tests/: test_bayesian_core.py  test_bayesian_optimization.py
