[project]
name = "LightningBO"
version = "0.1.2"
description = "LightningBO: JAXベースの高速ベイジアン最適化ライブラリ。ハイパーパラメータ探索やマーケティング最適化に最適。EI/PI/UCB/LCB獲得関数、ガウス過程、JIT高速化、メモリ効率設計。"
requires-python = ">=3.12"
authors = [
    { name = "s-ohtake", email = "s.ohtake@cartahd.com" }
]
readme = "README.md"
license = "Apache-2.0"
keywords = ["bayesian optimization", "jax", "hyperparameter", "machine learning", "marketing mix"]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "jax",
    "jaxlib",
    "optax",
    "numpy",
    "absl-py",
    "pytest",
    "matplotlib"
]

[project.urls]
Homepage = "https://github.com/s-ohtake/LightningBO"
Repository = "https://github.com/s-ohtake/LightningBO"
Documentation = "https://github.com/s-ohtake/LightningBO/blob/main/docs/LightningBO.ipynb"